Updated Readme and some discount logic
