# public/docs/openapi.yaml
@@ -41,30 +41,91 @@ paths:
                     name: '10 percent over 1000'
                     type: cart
                     filters: null
-                    rule: '{"condition":"{cart.total} >= 1000","amount":"{cart.total} * 0.1"}'
-                    expired_at: null
-                    created_at: '2022-07-14T23:06:30.000000Z'
-                    updated_at: '2022-07-14T23:06:30.000000Z'
+                    rule:
+                      condition: '{cart.total} >= 1000'
+                      amount: '{cart.total} * 0.1'
+                    priority: 1
+                    expires_at: null
+                    created_at: '2022-07-16T08:21:29.000000Z'
+                    updated_at: '2022-07-16T08:21:29.000000Z'
                   -
                     id: 2
                     name: 'Buy 5 get 1 in category id 2'
                     type: product
                     filters: null
-                    rule: '{"condition":"{product.category} == 2 && {product.quantity} == 6","amount":"{product.unitPrice}"}'
-                    expired_at: null
-                    created_at: '2022-07-14T23:06:30.000000Z'
-                    updated_at: '2022-07-14T23:06:30.000000Z'
+                    rule:
+                      condition: '{product.category} == 2 && {product.quantity} / 6 >= 1'
+                      amount: 'floor({product.quantity} / 6) * {product.unitPrice}'
+                    priority: 2
+                    expires_at: null
+                    created_at: '2022-07-16T08:21:29.000000Z'
+                    updated_at: '2022-07-16T08:21:29.000000Z'
                   -
                     id: 3
-                    name: 'Buy atleast 2 get %20 discount for the cheapest item in category id 2'
+                    name: 'Buy atleast 2 items in category 1, get %20 discount for the cheapest item'
                     type: cart
-                    filters: '{"category":1}'
-                    rule: '{"condition":"{cart.quantity} >= 2","amount":"{cart.cheapest} * 0.2"}'
-                    expired_at: null
-                    created_at: '2022-07-14T23:06:30.000000Z'
-                    updated_at: '2022-07-14T23:06:30.000000Z'
+                    filters:
+                      category: 1
+                    rule:
+                      condition: '{cart.quantity} >= 2'
+                      amount: '{cart.cheapest} * 0.2'
+                    priority: 3
+                    expires_at: null
+                    created_at: '2022-07-16T08:21:29.000000Z'
+                    updated_at: '2022-07-16T08:21:29.000000Z'
       tags:
         - 'Indirim Kurallari'
+      security: []
+    post:
+      summary: 'Indirim kurali ekle'
+      description: ''
+      parameters:
+        -
+          in: header
+          name: Content-Type
+          description: ''
+          example: application/json
+          schema:
+            type: string
+        -
+          in: header
+          name: Accept
+          description: ''
+          example: application/json
+          schema:
+            type: string
+      responses: {  }
+      tags:
+        - 'Indirim Kurallari'
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                  description: ''
+                  example: vel
+                type:
+                  type: string
+                  description: 'product | cart.'
+                  example: cart
+                filters:
+                  type: json
+                  description: 'Optional. You can filter by category or product id.'
+                  example: '{"category":2}'
+                rule:
+                  type: json
+                  description: ''
+                  example: expedita
+                priority:
+                  type: integer
+                  description: 'Priority. Higher priority discounts will be calculated first.'
+                  example: 10
+              required:
+                - rule
       security: []
   '/api/discounts/{order_id}':
     get:
@@ -89,10 +150,19 @@ paths:
         200:
           description: ''
           content:
-            text/plain:
+            application/json:
               schema:
-                type: string
-                example: ''
+                type: object
+                example:
+                  error: order.not_found
+                  message: 'Sipariş bulunamadı.'
+                properties:
+                  error:
+                    type: string
+                    example: order.not_found
+                  message:
+                    type: string
+                    example: 'Sipariş bulunamadı.'
       tags:
         - 'Indirim Kurallari'
       security: []
@@ -110,7 +180,7 @@ paths:
             value: ''
           present:
             summary: 'When the value is present'
-            value: 6
+            value: 5
   /api/orders:
     get:
       summary: 'Siparis Listeleme'
@@ -186,7 +256,7 @@ paths:
                 customerId:
                   type: integer
                   description: ''
-                  example: 18
+                  example: 12
                 items:
                   type: array
                   description: ''
@@ -198,11 +268,11 @@ paths:
                       productId:
                         type: integer
                         description: ''
-                        example: 16
+                        example: 12
                       quantity:
                         type: integer
                         description: ''
-                        example: 16
+                        example: 17
                     required:
                       - productId
                       - quantity
@@ -238,7 +308,7 @@ paths:
         in: path
         name: id
         description: 'The ID of the order.'
-        example: 1
+        example: 16
         required: true
         schema:
           type: integer
